hover over on logout and settings

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -44,3 +44,9 @@ body#center{
     margin-top: 20px;
     border-color: gray;
 }
+
+.btn-navbar:hover,
+.btn-navbar:active,
+.btn-navbar:focus {
+	color: rgb(0, 143, 178) !important;
+}
