--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -9,10 +9,10 @@
 		%div.collapse.navbar-collapse
 			%ul.nav.navbar-nav.navbar-right
 				%li
-					%a.button.btn.btn-default.btn-link{title: "Account Settings", type: "button", href: "/settings"}
+					%a.button.btn.btn-default.btn-link.btn-navbar{title: "Account Settings", type: "button", href: "/settings"}
 						%span.glyphicon.glyphicon-cog 
 						Settings
 				%li
-					%a.button.btn.btn-default.btn-link{title: "Log Out", type: "button", href: "/logout"}
+					%a.button.btn.btn-default.btn-link.btn-navbar{title: "Log Out", type: "button", href: "/logout"}
 						%span.glyphicon.glyphicon-off 
 						Log Out
