Cucumber fix & Settings fix

--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -40,11 +40,11 @@
 				%br
 				= password_field :user, :password
 				%br
-				= label :user, :password_confirmation, 'New Password Confirnmation'
+				= label :user, :password_confirmation, 'New Password Confirmation'
 				%br
 				= password_field :user, :password_confirmation
 				%br
 				%br
-				= submit_tag 'Update Shift'
+				= submit_tag 'Update User Information'
 		%br
-		= link_to 'Back to all shifts', shifts_path
+		= link_to 'Back to User Information', shifts_path
