--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -109,47 +109,6 @@
 															%div#red= radio_button_tag "#{shift.id}", 'no', true
 														%td.details= link_to 'details', shift
 
-				/ = week_calendar number_of_weeks: 2 do |date|
-				/ 	%table.table
-				/ 		%thead
-				/ 			%tr
-				/ 				%th= "#{date.month}/#{date.day}"
-				/ 			%tbody
-				/ 				- @shifts.each do |shift|
-				/ 					- if shift.shiftstart.to_s[5..6] == date.to_s[5..6] && shift.shiftstart.to_s[8..9] == date.to_s[8..9]
-				/ 						%tr
-				/ 							- if shift.shiftend.to_s[8..9].to_s == date.to_s[8..9]
-				/ 								%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}"
-				/ 							- else
-				/ 								%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}+"
-				/ 							- availability = Availability.where(user_id: session[:user_id], shift_id: shift.id).first
-				/ 							- if availability.nil? || availability.availability == 2
-				/ 								%td
-				/ 									%div#green= radio_button_tag "#{shift.id}", 'yes', true
-				/ 								%td
-				/ 									%div#yellow= radio_button_tag "#{shift.id}", 'maybe', false
-				/ 								%td
-				/ 									%div#red= radio_button_tag "#{shift.id}", 'no', false
-				/ 								%td.details= link_to 'details', shift
-				/ 							- elsif availability.availability == 1
-				/ 								%td
-				/ 									%div#green= radio_button_tag "#{shift.id}", 'yes', false
-				/ 								%td
-				/ 									%div#yellow= radio_button_tag "#{shift.id}", 'maybe', true
-				/ 								%td
-				/ 									%div#red= radio_button_tag "#{shift.id}", 'no', false
-				/ 								%td.details= link_to 'details', shift
-				/ 							- elsif availability.availability == 0
-				/ 								%td
-				/ 									%div#green= radio_button_tag "#{shift.id}", 'yes', false
-				/ 								%td
-				/ 									%div#yellow= radio_button_tag "#{shift.id}", 'maybe', false
-				/ 								%td
-				/ 									%div#red= radio_button_tag "#{shift.id}", 'no', true
-				/ 								%td.details= link_to 'details', shift
-
-
-				/ 	%br
 				= submit_tag 'Update'
 
 				= link_to 'Set Availabilities to Previous Pay Period', new_availability_path
@@ -169,7 +128,7 @@
 									- @shifts.each do |shift|
 										- if shift.shiftstart.to_s[5..6] == day.to_s[5..6] && shift.shiftstart.to_s[8..9] == day.to_s[8..9]
 											- if shift.users || shift.possible_users
-												%tr.shift
+												%tr.avail
 													-availability = Availability.where(user_id: session[:user_id], shift_id: shift.id).first
 													- if !availability.nil? && availability.availability != 0
 														- if shift.shiftend.to_s[8..9].to_s == day.to_s[8..9]
@@ -196,56 +155,3 @@
 															%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}"
 														- else
 															%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}+"
-
-			/ = week_calendar number_of_weeks: 2 do |date|
-			/ 	%table.table
-			/ 		%thead
-			/ 			%tr
-			/ 				%th= "#{date.month}/#{date.day}"
-			/ 			%tbody
-			/ 				- @shifts.each do |shift|
-			/ 					- if shift.shiftstart.to_s[5..6] == date.to_s[5..6] && shift.shiftstart.to_s[8..9] == date.to_s[8..9]
-			/ 						- if shift.users || shift.possible_users
-			/ 							%tr
-			/ 								-availability = Availability.where(user_id: session[:user_id], shift_id: shift.id).first
-			/ 								- if !availability.nil? && availability.availability != 0
-			/ 									- if shift.shiftend.to_s[8..9].to_s == date.to_s[8..9]
-			/ 										%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}"
-			/ 									- else
-			/ 										%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}+"
-
-			/ %h2 these are all the shifts currently in the shifts table
-
-			/ %table#shifts
-			/ 	%thead
-			/ 		%tr
-			/ 			%th starttime
-			/ 			%th endtime
-			/ 			%th available people
-			/ 			%th possibly available
-			/ 			%th assigned person
-			/ 			%th shift info
-			/ 		%tbody
-			/ 			- @shifts.each do |shift|
-			/ 				%tr
-			/ 					%td.shiftstart= shift.shiftstart
-			/ 					%td.shiftend= shift.shiftend
-			/ 					%td.shiftuser= shift.users.where(id: shift.availabilities.select(:user_id).where(shift_id: shift.id, availability: 2)).pluck(:last_name)
-			/ 					%td.possibleusers= shift.users.where(id: shift.availabilities.select(:user_id).where(shift_id: shift.id, availability: 1)).pluck(:last_name)
-			/ 					%td.owner= shift.owner
-			/ 					%td.details= link_to 'details', shift
-
-			/ %h2 this is the availabilities table
-
-			/ %table#availabilities
-			/ 	%thead
-			/ 		%tr
-			/ 			%th user_id
-			/ 			%th shift_id
-			/ 			%th availability
-			/ 		%tbody
-			/ 			- @availabilities.each do |a|
-			/ 				%tr
-			/ 					%td.user_id= a.user_id
-			/ 					%td.shift_id= a.shift_id
-			/ 					%td.availability= a.availability
