--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -6,8 +6,9 @@
       %li
         %a= link_to 'Home', home_path
       %li
+      -if @user.usertype != 'Administrative Assistant'
         %a= link_to 'Set Availability', availabilities_path
-      - if @user.usertype == 'Administrator'
+      - if @user.usertype == 'Administrator' || @user.usertype == 'Administrative Assistant'
         %li 
           %a= link_to 'Shift Scheduler', shifts_path
         %li
@@ -30,15 +31,17 @@
             hour(s)
         %li
           %b Available Doctors:
-          - if @shift.users != []
-            = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 2)).pluck(:last_name)
+          - avail = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 2)).pluck(:last_name)
+          - if avail != []
+            = avail
           - else
             No Available Doctors
 
         %li
           %b Possibly Available Doctors:
-          - if @shift.possible_users != " "
-            = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 1)).pluck(:last_name)
+          - p_avail = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 1)).pluck(:last_name)
+          - if p_avail != []
+            =p_avail
           - else
             No Possibly Available Doctors
 
@@ -50,8 +53,8 @@
 
       = form_tag shift_path(@shift), :method => :put do
 
-        = label :s, :date, 'Shift Start Date:'
-        = date_select :s, :date, :start_year => Date.today.year
+        = label :shift, :date, 'Shift Start Date:'
+        = date_select :shift, :shiftstart, :start_year => Date.today.year
         %br
         =label :time, :hour, 'Shift Start Time:'
         - hour = @shift.shiftstart.hour.to_i
@@ -67,7 +70,7 @@
         %br
 
         - if @shift.users != [] || @shift.possible_users != " " 
-          = label :s, :owner, 'Assign Doctor:'
+          = label :shift, :owner, 'Assign Doctor:'
           - @temp1 = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 2))
           - @temp2 = @shift.users.where(id: @shift.availabilities.select(:user_id).where(shift_id: @shift.id, availability: 1))
           - @temp3 = @temp1 | @temp2
