--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -5,9 +5,10 @@
 		%ul.sidebar-nav
 			%li
 				%a= link_to 'Home', home_path
-			%li
-				%a= link_to 'Set Availability', availabilities_path
-			- if @user.usertype == 'Administrator'
+			-if @user.usertype != 'Administrative Assistant'
+				%li
+					%a= link_to 'Set Availability', availabilities_path
+			- if @user.usertype == 'Administrator' || @user.usertype == 'Administrative Assistant'
 				%li 
 					%a= link_to 'Shift Scheduler', shifts_path
 				%li
@@ -31,10 +32,6 @@
 				= label :user, :email, 'Email'
 				%br
 				= text_field :user, :email
-				%br
-				= label :user, :fte, 'FTE'
-				%br
-				= number_field :user, :fte, step: 0.1, :"value" => 1.0, :"max" => 1.0, :"min" => 0
 				%br
 				= label :user, :password, 'New Password'
 				%br
