--- a/app/views/shifts/new.html.haml
+++ b/app/views/shifts/new.html.haml
@@ -23,7 +23,7 @@
 				= date_select :shift, :shiftstart, :start_year => Time.now.year, :default => -7.hour.from_now
 				%br
 				=label :time, :time, 'Shift Start Time:'
-				- hour = Time.now.hour.to_i
+				- hour = (Time.now.hour - 7.hour).to_i
 				- if hour < 10
 					- hour = "0#{hour}"
 				= select :time, :hour, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'], selected: hour
