--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -13,6 +13,8 @@
           %a= link_to 'Shift Scheduler', shifts_path
         %li
           %a= link_to 'Set FTE Multiplier', multiply_path
+          
+  =render :partial => "shared/sidebar-showhide"
 
   %div#page-content-wrapper
     %div.container-fluid 
