--- a/app/views/verification/not.html.haml
+++ b/app/views/verification/not.html.haml
@@ -14,6 +14,8 @@
 				%li
 					%a= link_to 'Set FTE Multiplier', multiply_path
 
+	=render :partial => "shared/sidebar-showhide"
+
 	%div#page-content-wrapper
 		%div.container-fluid 			
 			%h2 Your account has not been verified yet. Please wait for the admin you verify your information
