--- a/app/views/fte_multiplier/index.html.haml
+++ b/app/views/fte_multiplier/index.html.haml
@@ -15,6 +15,8 @@
 				%li
 					%a= link_to 'Set FTE Multiplier', multiply_path
 
+	=render :partial => "shared/sidebar-showhide"
+
 	%div#page-content-wrapper
 		%div.container-fluid
 			%h1 Set the FTE multiplier for each doctor
