--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,3 @@
-= javascript_include_tag "application"
 =render :partial => "shared/navbar", :user => @user						
 
 %div#wrapper
@@ -6,7 +5,6 @@
 		%ul.sidebar-nav
 			%li
 				%a= link_to 'Home', home_path
-			%li
 			-if @user.usertype != 'Administrative Assistant'
 				%li
 					%a= link_to 'Set Availability', availabilities_path
@@ -15,10 +13,9 @@
 					%a= link_to 'Shift Scheduler', shifts_path
 				%li
 					%a= link_to 'Set FTE Multiplier', multiply_path
-	
-	%div
-		%a#sidebar-show.btn.btn-default.btn-xs{:onclick => 'expandOrShrink(); return false;'} <<<
 
+	=render :partial => "shared/sidebar-showhide"	
+	
 	%div#page-content-wrapper
 		%div.container-fluid
 			/ %a#toggle-sidebar.btn.btn-default{:onclick => 'expandOrShrink(); return false;'} Sidebar Collapse
