--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -14,6 +14,8 @@
 				%li
 					%a= link_to 'Set FTE Multiplier', multiply_path
 
+	=render :partial => "shared/sidebar-showhide"
+
 	%div#page-content-wrapper
 		%div.container-fluid 
 			:css
