--- a/app/views/fte_multiplier/index.html.haml
+++ b/app/views/fte_multiplier/index.html.haml
@@ -45,6 +45,6 @@
 									%td= number_field_tag "#{user.id}_fte", user.fte, step: 0.05, min: 0.1, max: 1.0
 									%td= user.fte_multiplier
 									%td= number_field_tag "#{user.id}", user.fte_multiplier, step: 0.05
-									%td= (user.fte*user.fte_multiplier*80)
+									%td= (user.fte*user.fte_multiplier*80).floor
 
 				= submit_tag 'Update'
