--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -16,7 +16,7 @@
           = f.text_field :last_name, class: 'form-control', placeholder: "Last Name"
           = f.text_field :email, class: 'form-control', placeholder: "Email"
           = f.label :usertype, "Select User Type"
-          = f.select(:usertype, ['Core Doctor', 'Night Doctor', 'Administrator', 'Administrative Assistant'], {}, {:class=> 'form-control'})
+          = f.select(:usertype, ['Core Doctor', 'Night Doctor', 'Administrator', 'Administrative Assistant', 'Moonlighter'], {}, {:class=> 'form-control'})
           = f.label :account_info, "Account Information"
           = f.text_field :username, class: 'form-control', placeholder: "Username"
           = f.password_field :password, class: 'form-control', placeholder: "Password"
