made view for requirement when setting availabilities

--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -117,6 +117,15 @@
 			%div.content-separator
 			%h2 Your Availabilities
 
+			- curr_amt = 0
+			- Availability.all.each do |availability|
+				- if User.find(availability.user_id) == @user and availability.availability != 0
+					- shift = Shift.find(availability.shift_id)
+					- printf "_______________________________________#{shift.shiftstart}"
+					- if shift.shiftstart >= @date_start and shift.shiftstart <= (@date_start + 13.to_f)
+						- curr_amt += (shift.shiftend - shift.shiftstart)/1.hours
+			%p= "You are currently signed up for #{curr_amt.to_i} hours of the required #{(@user.fte*@user.fte_multiplier*80).to_i} hours you need to make yourself available."
+			%p= "However, you have to work #{(@user.fte*80).to_i} hours per pay period."
 			%table.table
 				%thead
 					- @next_seven.each do |day|
